--- a/docs/node/pages/api/vm-and-submodules.mdx
+++ b/docs/node/pages/api/vm-and-submodules.mdx
@@ -33,6 +33,14 @@ const result = await evm.runCall({
 })
 
 // Full transaction execution (recommended)
+// Use createImpersonatedTx to create transactions
+import { createImpersonatedTx } from "tevm/tx";
+
+const transaction = createImpersonatedTx({
+  to: "0x1234567890123456789012345678901234567890",
+  data: "0x...",
+});
+
 const txResult = await vm.runTx({
   tx: transaction,
   block: block,
